--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 baseurl: "/archivo"
-production_url : http://f4all.github.io/chmod.freed0m4all.net/archivo
+production_url : http://f4all.github.io/chmod/archivo
 BASE_PATH : http://chmod.freed0m4all.net/archivo
